seaqt/QtCore/gen_qtimezone.nim

import ./qtcore_pkg

{.push raises: [].}

from system/ansi_c import c_free, c_malloc

type
  struct_seaqt_string {.used.} = object
    len: csize_t
    data: pointer

  struct_seaqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_seaqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: struct_seaqt_string): string {.used.} =
  if v.len > 0:
    let len = cast[int](v.len)
    result = newStringUninit(len)
    when nimvm:
      let d = cast[ptr UncheckedArray[char]](v.data)
      for i in 0..<len:
        result[i] = d[i]
    else:
      copyMem(addr result[0], v.data, len)


type QTimeZoneEnumEnum* = distinct cint
template MinUtcOffsetSecs*(_: type QTimeZoneEnumEnum): untyped = -50400
template MaxUtcOffsetSecs*(_: type QTimeZoneEnumEnum): untyped = 50400


type QTimeZoneTimeTypeEnum* = distinct cint
template StandardTime*(_: type QTimeZoneTimeTypeEnum): untyped = 0
template DaylightTime*(_: type QTimeZoneTimeTypeEnum): untyped = 1
template GenericTime*(_: type QTimeZoneTimeTypeEnum): untyped = 2


type QTimeZoneNameTypeEnum* = distinct cint
template DefaultName*(_: type QTimeZoneNameTypeEnum): untyped = 0
template LongName*(_: type QTimeZoneNameTypeEnum): untyped = 1
template ShortName*(_: type QTimeZoneNameTypeEnum): untyped = 2
template OffsetName*(_: type QTimeZoneNameTypeEnum): untyped = 3


import ./gen_qtimezone_types
export gen_qtimezone_types

import
  ./gen_qdatetime_types,
  ./gen_qlocale_types
export
  gen_qdatetime_types,
  gen_qlocale_types

type cQTimeZone*{.exportc: "QTimeZone", incompleteStruct.} = object
type cQTimeZoneOffsetData*{.exportc: "QTimeZone__OffsetData", incompleteStruct.} = object

proc fcQTimeZone_operatorAssign(self: pointer, fromVal: pointer): void {.importc: "QTimeZone_operatorAssign".}
proc fcQTimeZone_swap(self: pointer, other: pointer): void {.importc: "QTimeZone_swap".}
proc fcQTimeZone_isValid(self: pointer): bool {.importc: "QTimeZone_isValid".}
proc fcQTimeZone_id(self: pointer): struct_seaqt_string {.importc: "QTimeZone_id".}
proc fcQTimeZone_country(self: pointer): cint {.importc: "QTimeZone_country".}
proc fcQTimeZone_comment(self: pointer): struct_seaqt_string {.importc: "QTimeZone_comment".}
proc fcQTimeZone_displayNameAtDateTime(self: pointer, atDateTime: pointer): struct_seaqt_string {.importc: "QTimeZone_displayName_atDateTime".}
proc fcQTimeZone_displayNameTimeType(self: pointer, timeType: cint): struct_seaqt_string {.importc: "QTimeZone_displayName_timeType".}
proc fcQTimeZone_abbreviation(self: pointer, atDateTime: pointer): struct_seaqt_string {.importc: "QTimeZone_abbreviation".}
proc fcQTimeZone_offsetFromUtc(self: pointer, atDateTime: pointer): cint {.importc: "QTimeZone_offsetFromUtc".}
proc fcQTimeZone_standardTimeOffset(self: pointer, atDateTime: pointer): cint {.importc: "QTimeZone_standardTimeOffset".}
proc fcQTimeZone_daylightTimeOffset(self: pointer, atDateTime: pointer): cint {.importc: "QTimeZone_daylightTimeOffset".}
proc fcQTimeZone_hasDaylightTime(self: pointer): bool {.importc: "QTimeZone_hasDaylightTime".}
proc fcQTimeZone_isDaylightTime(self: pointer, atDateTime: pointer): bool {.importc: "QTimeZone_isDaylightTime".}
proc fcQTimeZone_offsetData(self: pointer, forDateTime: pointer): pointer {.importc: "QTimeZone_offsetData".}
proc fcQTimeZone_hasTransitions(self: pointer): bool {.importc: "QTimeZone_hasTransitions".}
proc fcQTimeZone_nextTransition(self: pointer, afterDateTime: pointer): pointer {.importc: "QTimeZone_nextTransition".}
proc fcQTimeZone_previousTransition(self: pointer, beforeDateTime: pointer): pointer {.importc: "QTimeZone_previousTransition".}
proc fcQTimeZone_transitions(self: pointer, fromDateTime: pointer, toDateTime: pointer): struct_seaqt_array {.importc: "QTimeZone_transitions".}
proc fcQTimeZone_systemTimeZoneId(): struct_seaqt_string {.importc: "QTimeZone_systemTimeZoneId".}
proc fcQTimeZone_systemTimeZone(): pointer {.importc: "QTimeZone_systemTimeZone".}
proc fcQTimeZone_utc(): pointer {.importc: "QTimeZone_utc".}
proc fcQTimeZone_isTimeZoneIdAvailable(ianaId: struct_seaqt_string): bool {.importc: "QTimeZone_isTimeZoneIdAvailable".}
proc fcQTimeZone_availableTimeZoneIds(): struct_seaqt_array {.importc: "QTimeZone_availableTimeZoneIds".}
proc fcQTimeZone_availableTimeZoneIdsCountry(country: cint): struct_seaqt_array {.importc: "QTimeZone_availableTimeZoneIds_country".}
proc fcQTimeZone_availableTimeZoneIdsOffsetSeconds(offsetSeconds: cint): struct_seaqt_array {.importc: "QTimeZone_availableTimeZoneIds_offsetSeconds".}
proc fcQTimeZone_ianaIdToWindowsId(ianaId: struct_seaqt_string): struct_seaqt_string {.importc: "QTimeZone_ianaIdToWindowsId".}
proc fcQTimeZone_windowsIdToDefaultIanaIdWindowsId(windowsId: struct_seaqt_string): struct_seaqt_string {.importc: "QTimeZone_windowsIdToDefaultIanaId_windowsId".}
proc fcQTimeZone_windowsIdToDefaultIanaIdWindowsIdCountry(windowsId: struct_seaqt_string, country: cint): struct_seaqt_string {.importc: "QTimeZone_windowsIdToDefaultIanaId_windowsId_country".}
proc fcQTimeZone_windowsIdToIanaIdsWindowsId(windowsId: struct_seaqt_string): struct_seaqt_array {.importc: "QTimeZone_windowsIdToIanaIds_windowsId".}
proc fcQTimeZone_windowsIdToIanaIdsWindowsIdCountry(windowsId: struct_seaqt_string, country: cint): struct_seaqt_array {.importc: "QTimeZone_windowsIdToIanaIds_windowsId_country".}
proc fcQTimeZone_displayNameAtDateTimeNameType(self: pointer, atDateTime: pointer, nameType: cint): struct_seaqt_string {.importc: "QTimeZone_displayName_atDateTime_nameType".}
proc fcQTimeZone_displayNameAtDateTimeNameTypeLocale(self: pointer, atDateTime: pointer, nameType: cint, locale: pointer): struct_seaqt_string {.importc: "QTimeZone_displayName_atDateTime_nameType_locale".}
proc fcQTimeZone_displayNameTimeTypeNameType(self: pointer, timeType: cint, nameType: cint): struct_seaqt_string {.importc: "QTimeZone_displayName_timeType_nameType".}
proc fcQTimeZone_displayNameTimeTypeNameTypeLocale(self: pointer, timeType: cint, nameType: cint, locale: pointer): struct_seaqt_string {.importc: "QTimeZone_displayName_timeType_nameType_locale".}
proc fcQTimeZone_new(): ptr cQTimeZone {.importc: "QTimeZone_new".}
proc fcQTimeZone_new2(ianaId: struct_seaqt_string): ptr cQTimeZone {.importc: "QTimeZone_new_ianaId".}
proc fcQTimeZone_new3(offsetSeconds: cint): ptr cQTimeZone {.importc: "QTimeZone_new_offsetSeconds".}
proc fcQTimeZone_new4(zoneId: struct_seaqt_string, offsetSeconds: cint, name: struct_seaqt_string, abbreviation: struct_seaqt_string): ptr cQTimeZone {.importc: "QTimeZone_new_zoneId_offsetSeconds_name_abbreviation".}
proc fcQTimeZone_new5(fromVal: pointer): ptr cQTimeZone {.importc: "QTimeZone_new_from".}
proc fcQTimeZone_new6(zoneId: struct_seaqt_string, offsetSeconds: cint, name: struct_seaqt_string, abbreviation: struct_seaqt_string, country: cint): ptr cQTimeZone {.importc: "QTimeZone_new_zoneId_offsetSeconds_name_abbreviation_country".}
proc fcQTimeZone_new7(zoneId: struct_seaqt_string, offsetSeconds: cint, name: struct_seaqt_string, abbreviation: struct_seaqt_string, country: cint, comment: struct_seaqt_string): ptr cQTimeZone {.importc: "QTimeZone_new_zoneId_offsetSeconds_name_abbreviation_country_comment".}
proc fcQTimeZoneOffsetData_abbreviation(self: pointer): struct_seaqt_string {.importc: "QTimeZone__OffsetData_abbreviation".}
proc fcQTimeZoneOffsetData_setAbbreviation(self: pointer, abbreviation: struct_seaqt_string): void {.importc: "QTimeZone__OffsetData_setAbbreviation".}
proc fcQTimeZoneOffsetData_atUtc(self: pointer): pointer {.importc: "QTimeZone__OffsetData_atUtc".}
proc fcQTimeZoneOffsetData_setAtUtc(self: pointer, atUtc: pointer): void {.importc: "QTimeZone__OffsetData_setAtUtc".}
proc fcQTimeZoneOffsetData_offsetFromUtc(self: pointer): cint {.importc: "QTimeZone__OffsetData_offsetFromUtc".}
proc fcQTimeZoneOffsetData_setOffsetFromUtc(self: pointer, offsetFromUtc: cint): void {.importc: "QTimeZone__OffsetData_setOffsetFromUtc".}
proc fcQTimeZoneOffsetData_standardTimeOffset(self: pointer): cint {.importc: "QTimeZone__OffsetData_standardTimeOffset".}
proc fcQTimeZoneOffsetData_setStandardTimeOffset(self: pointer, standardTimeOffset: cint): void {.importc: "QTimeZone__OffsetData_setStandardTimeOffset".}
proc fcQTimeZoneOffsetData_daylightTimeOffset(self: pointer): cint {.importc: "QTimeZone__OffsetData_daylightTimeOffset".}
proc fcQTimeZoneOffsetData_setDaylightTimeOffset(self: pointer, daylightTimeOffset: cint): void {.importc: "QTimeZone__OffsetData_setDaylightTimeOffset".}
proc fcQTimeZoneOffsetData_operatorAssign(self: pointer, fromVal: pointer): void {.importc: "QTimeZone__OffsetData_operatorAssign".}
proc fcQTimeZoneOffsetData_new(fromVal: pointer): ptr cQTimeZoneOffsetData {.importc: "QTimeZone__OffsetData_new".}

proc operatorAssign*(self: gen_qtimezone_types.QTimeZone, fromVal: gen_qtimezone_types.QTimeZone): void =
  fcQTimeZone_operatorAssign(self.h, fromVal.h)

proc swap*(self: gen_qtimezone_types.QTimeZone, other: gen_qtimezone_types.QTimeZone): void =
  fcQTimeZone_swap(self.h, other.h)

proc isValid*(self: gen_qtimezone_types.QTimeZone): bool =
  fcQTimeZone_isValid(self.h)

proc id*(self: gen_qtimezone_types.QTimeZone): seq[byte] =
  var v_bytearray = fcQTimeZone_id(self.h)
  var vx_ret = @(toOpenArray(cast[ptr UncheckedArray[byte]](v_bytearray.data), 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc country*(self: gen_qtimezone_types.QTimeZone): cint =
  cint(fcQTimeZone_country(self.h))

proc comment*(self: gen_qtimezone_types.QTimeZone): string =
  let v_ms = fcQTimeZone_comment(self.h)
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc displayName*(self: gen_qtimezone_types.QTimeZone, atDateTime: gen_qdatetime_types.QDateTime): string =
  let v_ms = fcQTimeZone_displayNameAtDateTime(self.h, atDateTime.h)
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc displayName*(self: gen_qtimezone_types.QTimeZone, timeType: cint): string =
  let v_ms = fcQTimeZone_displayNameTimeType(self.h, cint(timeType))
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc abbreviation*(self: gen_qtimezone_types.QTimeZone, atDateTime: gen_qdatetime_types.QDateTime): string =
  let v_ms = fcQTimeZone_abbreviation(self.h, atDateTime.h)
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc offsetFromUtc*(self: gen_qtimezone_types.QTimeZone, atDateTime: gen_qdatetime_types.QDateTime): cint =
  fcQTimeZone_offsetFromUtc(self.h, atDateTime.h)

proc standardTimeOffset*(self: gen_qtimezone_types.QTimeZone, atDateTime: gen_qdatetime_types.QDateTime): cint =
  fcQTimeZone_standardTimeOffset(self.h, atDateTime.h)

proc daylightTimeOffset*(self: gen_qtimezone_types.QTimeZone, atDateTime: gen_qdatetime_types.QDateTime): cint =
  fcQTimeZone_daylightTimeOffset(self.h, atDateTime.h)

proc hasDaylightTime*(self: gen_qtimezone_types.QTimeZone): bool =
  fcQTimeZone_hasDaylightTime(self.h)

proc isDaylightTime*(self: gen_qtimezone_types.QTimeZone, atDateTime: gen_qdatetime_types.QDateTime): bool =
  fcQTimeZone_isDaylightTime(self.h, atDateTime.h)

proc offsetData*(self: gen_qtimezone_types.QTimeZone, forDateTime: gen_qdatetime_types.QDateTime): gen_qtimezone_types.QTimeZoneOffsetData =
  gen_qtimezone_types.QTimeZoneOffsetData(h: fcQTimeZone_offsetData(self.h, forDateTime.h), owned: true)

proc hasTransitions*(self: gen_qtimezone_types.QTimeZone): bool =
  fcQTimeZone_hasTransitions(self.h)

proc nextTransition*(self: gen_qtimezone_types.QTimeZone, afterDateTime: gen_qdatetime_types.QDateTime): gen_qtimezone_types.QTimeZoneOffsetData =
  gen_qtimezone_types.QTimeZoneOffsetData(h: fcQTimeZone_nextTransition(self.h, afterDateTime.h), owned: true)
